# witcher-senses

./: .gitmodules  CMakeLists.txt  LICENSE
assets/: colormapping.frag  compose.frag  intensity.frag  intensity.vert  object.frag  object.vert  outline.frag  outline.vert  plane.gltf  sphere.gltf  triangle.frag  triangle.vert
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
